--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -36,6 +36,14 @@
             android:layout_width="match_parent"
             android:layout_height="250dp" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/play_button2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_play"
+            android:layout_gravity="center"
+            android:visibility="visible"/>
+
     </androidx.cardview.widget.CardView>
 
 
