create splash screen

--- a/app/src/main/res/layout/activity_video_course.xml
+++ b/app/src/main/res/layout/activity_video_course.xml
@@ -95,15 +95,27 @@
             app:layout_constraintStart_toStartOf="@+id/cardView4"
             app:layout_constraintTop_toBottomOf="@+id/detail_video" />
 
+        <TextView
+            android:id="@+id/editText"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:text="25/100%"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="@+id/progressBar"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
             android:layout_height="3dp"
-            android:layout_marginTop="25dp"
+            android:background="@drawable/back_progressbar"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/appCompatButton"
