--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="blue">#000080</color>
     <color name="blue2">#3785CD</color>
     <color name="gray">#969E9E</color>
+    <color name="red">#ED2E2E</color>
+    <color name="Primaryblack">#141414</color>
 
 
 
