--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,5 +6,15 @@
         <item name="cornerSize">25dp</item>
     </style>
 
+    <style name="CustomTextInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="boxStrokeWidthFocused">4dp</item>
+        <item name="android:color">@color/blue</item>
+        <item name="boxStrokeColor">@color/blue</item>
+
+    </style>
+
+
 
 </resources>
