--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
     <TextView
-        android:id="@+id/textView88"
+        android:id="@+id/txt_ghavanin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="شرایط و قوانین دانشجویار را مطالعه کردم و می پذیرم."
