--- a/app/src/main/res/layout/fragment_login_pass.xml
+++ b/app/src/main/res/layout/fragment_login_pass.xml
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="15dp"
-        android:text="ورود یا ثبت نام"
-        android:textSize="20sp"
+        android:text="کد تایید 5 رقمی را وارد کنید."
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,9 +36,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="لطفا شماره موبایل خود را وارد کنید."
+        tools:text="کد تایید برای شماره موبایل 09361234567 ارسال شد."
         android:textColor="@color/Primaryblack"
-        android:textSize="15sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -50,36 +50,34 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
+        app:boxStrokeColor="@color/blue"
+        app:boxStrokeErrorColor="@color/red"
         app:errorEnabled="true"
+        app:errorTextColor="@color/red"
         app:hintEnabled="true"
         app:layout_constraintEnd_toEndOf="@+id/txt_mobile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_mobile"
-        app:boxStrokeColor="@color/blue"
-        app:errorTextColor="@color/red"
-        app:boxStrokeErrorColor="@color/red"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/edt_mobile">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_edit_mobil"
+            android:id="@+id/txt_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/_09"
-            android:textColor="@color/black"
-            android:maxLength="11"
             android:background="@drawable/back_edit_text"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:maxLength="5"
+            android:textColor="@color/black" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSendCode"
+        android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/back_button_de_active"
-        android:text="تایید و ادامه"
+        android:background="@drawable/back_button"
+        android:text="ورود"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:enabled="false"
@@ -91,28 +89,43 @@
         android:id="@+id/txt_ghavanin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="شرایط و قوانین دانشجویار را مطالعه کردم و می پذیرم."
+        android:text="تایمر"
         android:textColor="@color/Primaryblack"
-        android:textSize="16sp"
+        android:textSize="11sp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/btnSendCode"
-        app:layout_constraintStart_toStartOf="@+id/btnSendCode"
-        app:layout_constraintTop_toBottomOf="@+id/btnSendCode" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_login"
+        app:layout_constraintStart_toStartOf="@+id/btn_login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+
+    <View
+        android:id="@+id/edt_mobile"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/txt_mobile"
+        app:layout_constraintTop_toBottomOf="@+id/txt_mobile" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/img"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_mobile"
+        app:layout_constraintEnd_toEndOf="@+id/edt_mobile"
+        app:layout_constraintTop_toTopOf="@+id/edt_mobile"
+        app:srcCompat="@drawable/ic_edit" />
 
     <TextView
-        android:id="@+id/txt_mobil"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
-        android:padding="3dp"
-        android:textSize="11sp"
-        android:text="شماره موبایل"
-        android:background="@color/white"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/txt_mobile"
-        app:layout_constraintVertical_bias="0.26999998"/>
+        android:text="ویرایش شماره"
+        android:textColor="@color/blue"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
+        app:layout_constraintEnd_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toTopOf="@+id/imageView12" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
