--- a/app/src/main/res/layout/fragment_course_video.xml
+++ b/app/src/main/res/layout/fragment_course_video.xml
@@ -29,7 +29,7 @@
             android:text="المنتور چیست؟چرا باید از آن استفاده کنیم؟"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/customAppBar" />
@@ -61,6 +61,7 @@
             android:text="لورم اپیسون متن ساختگی با تولید ساختگی نامفهوم از صنعت چاپ"
             android:textColor="@color/black"
             android:textSize="15sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintEnd_toEndOf="@+id/cardView4"
             app:layout_constraintStart_toStartOf="@+id/cardView4"
             app:layout_constraintTop_toBottomOf="@+id/cardView4" />
@@ -73,7 +74,8 @@
             android:text="درصد پیشرفت"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:textStyle="bold"
+
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="@+id/cardView4"
             app:layout_constraintStart_toStartOf="@+id/cardView4"
             app:layout_constraintTop_toBottomOf="@+id/detail_video" />
@@ -97,6 +99,7 @@
             android:text="من این بخش را کامل دیدم"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintEnd_toEndOf="@+id/progressBar"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="@+id/progressBar"
@@ -111,6 +114,7 @@
             android:text="راهنما"
             android:textColor="@color/blue"
             android:textSize="16sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
             app:layout_constraintStart_toStartOf="@+id/appCompatButton"
             app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />
@@ -125,6 +129,7 @@
             android:text="قسمت قبلی"
             android:textColor="@color/blue"
             android:textSize="16sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -140,6 +145,7 @@
             android:text="قسمت بعدی"
             android:textColor="@color/blue"
             android:textSize="16sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toBottomOf="@+id/appCompatButton3"
             app:layout_constraintEnd_toStartOf="@+id/appCompatButton3"
             app:layout_constraintHorizontal_bias="0.5"
