--- a/app/src/main/res/layout/list_item_info.xml
+++ b/app/src/main/res/layout/list_item_info.xml
@@ -15,8 +15,8 @@
         android:layout_marginEnd="8dp"
         android:text="از کی یاد می گیریم؟"
         android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        android:fontFamily="@font/sans_fa_name_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/sans_fa_name_bold"
                     app:layout_constraintEnd_toEndOf="@+id/imageView15"
                     app:layout_constraintStart_toStartOf="@+id/imageView15"
                     app:layout_constraintTop_toBottomOf="@+id/imageView15"
@@ -89,6 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:textColor="@color/black"
+                    android:fontFamily="@font/sans_fa_name_regular"
                     app:layout_constraintEnd_toEndOf="@+id/txt_titli_1_1"
                     app:layout_constraintStart_toStartOf="@+id/txt_titli_1_1"
                     app:layout_constraintTop_toBottomOf="@+id/txt_titli_1_1"
@@ -134,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/sans_fa_name_bold"
                     app:layout_constraintEnd_toEndOf="@+id/imageView16"
                     app:layout_constraintStart_toStartOf="@+id/imageView16"
                     app:layout_constraintTop_toBottomOf="@+id/imageView16"
@@ -191,7 +192,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/sans_fa_name_bold"
                     app:layout_constraintEnd_toEndOf="@+id/imageView17"
                     app:layout_constraintStart_toStartOf="@+id/imageView17"
                     app:layout_constraintTop_toBottomOf="@+id/imageView17"
@@ -203,6 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:textColor="@color/black"
+                    android:fontFamily="@font/sans_fa_name_regular"
                     app:layout_constraintEnd_toEndOf="@+id/txt_title_3_1"
                     app:layout_constraintStart_toStartOf="@+id/txt_title_3_1"
                     app:layout_constraintTop_toBottomOf="@+id/txt_title_3_1"
@@ -249,7 +251,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/sans_fa_name_bold"
                     app:layout_constraintEnd_toEndOf="@+id/imageView18"
                     app:layout_constraintStart_toStartOf="@+id/imageView18"
                     app:layout_constraintTop_toBottomOf="@+id/imageView18"
@@ -261,6 +263,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:textColor="@color/black"
+                    android:fontFamily="@font/sans_fa_name_regular"
                     app:layout_constraintEnd_toEndOf="@+id/txt_title_4_1"
                     app:layout_constraintStart_toStartOf="@+id/txt_title_4_1"
                     app:layout_constraintTop_toBottomOf="@+id/txt_title_4_1"
