--- a/app/src/main/res/drawable/back_bottom_recycler.xml
+++ b/app/src/main/res/drawable/back_bottom_recycler.xml
@@ -5,7 +5,8 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="8dp"/>
-            <stroke android:width="5dp" android:color="@color/gray"/>
+            <stroke android:color="@color/gray" android:width="1dp"/>
+
         </shape>
     </item>
 </selector>
