--- a/app/src/main/res/layout/activity_video_course.xml
+++ b/app/src/main/res/layout/activity_video_course.xml
@@ -30,6 +30,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/customAppBar" />
@@ -78,6 +79,7 @@
             android:text="لورم اپیسون متن ساختگی با تولید ساختگی نامفهوم از صنعت چاپ"
             android:textColor="@color/black"
             android:textSize="15sp"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintEnd_toEndOf="@+id/cardView4"
             app:layout_constraintStart_toStartOf="@+id/cardView4"
             app:layout_constraintTop_toBottomOf="@+id/cardView4" />
@@ -91,6 +93,7 @@
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="@+id/cardView4"
             app:layout_constraintStart_toStartOf="@+id/cardView4"
             app:layout_constraintTop_toBottomOf="@+id/detail_video" />
