--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -17,6 +17,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:fontFamily="@font/sans_fa_name_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +43,7 @@
         android:text="به اینترنت متصل نیستید. برای استفاده از اپلیکیشن به اینترنت متصل شوید."
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView10" />
@@ -56,6 +58,7 @@
         android:backgroundTintMode="add"
         android:text="اینترنت موبایل"
         android:textColor="@color/black"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -69,6 +72,7 @@
         android:background="@drawable/back_button"
         android:text="Wi_Fiاینترنت"
         android:textColor="@color/white"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toStartOf="@+id/btn_net"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/textView3"
