--- a/app/src/main/res/layout/custom_item_about.xml
+++ b/app/src/main/res/layout/custom_item_about.xml
@@ -36,6 +36,7 @@
             android:layout_marginTop="10dp"
             tools:text="+400,000"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView15"
             app:layout_constraintStart_toStartOf="@+id/imageView15"
             app:layout_constraintTop_toBottomOf="@+id/imageView15" />
@@ -46,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textColor="@color/black"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintEnd_toEndOf="@+id/txt_title_1_1"
             app:layout_constraintStart_toStartOf="@+id/txt_title_1_1"
             app:layout_constraintTop_toBottomOf="@+id/txt_title_1_1"
