--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -89,6 +89,7 @@
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
@@ -132,6 +133,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toTopOf="@+id/view4"
             app:layout_constraintEnd_toEndOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -158,6 +160,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toTopOf="@+id/view4"
             app:layout_constraintEnd_toEndOf="@+id/imageView4"
             app:layout_constraintStart_toStartOf="@+id/imageView4"
@@ -181,6 +184,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toBottomOf="@+id/view3"
             app:layout_constraintEnd_toEndOf="@+id/imageView6"
             app:layout_constraintStart_toStartOf="@+id/imageView6"
@@ -204,6 +208,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toBottomOf="@+id/view3"
             app:layout_constraintEnd_toEndOf="@+id/imageView7"
             app:layout_constraintHorizontal_bias="0.448"
