--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,8 +25,9 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="15dp"
         android:text="ورود یا ثبت نام"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="18sp"
+
+        android:fontFamily="@font/sans_fa_name_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11" />
@@ -39,6 +40,7 @@
         android:text="لطفا شماره موبایل خود را وارد کنید."
         android:textColor="@color/Primaryblack"
         android:textSize="15sp"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -66,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/_09"
+            android:fontFamily="@font/sans_fa_name_regular"
             android:textColor="@color/black"
             android:maxLength="11"
             android:background="@drawable/back_edit_text"
@@ -83,6 +86,7 @@
         android:textColor="@color/white"
         android:textSize="15sp"
         android:enabled="false"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
@@ -95,6 +99,7 @@
         android:textColor="@color/Primaryblack"
         android:textSize="16sp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toEndOf="@+id/btnSendCode"
         app:layout_constraintStart_toStartOf="@+id/btnSendCode"
         app:layout_constraintTop_toBottomOf="@+id/btnSendCode" />
@@ -109,6 +114,7 @@
         android:text="شماره موبایل"
         android:background="@color/white"
         android:visibility="invisible"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/txt_mobile"
