--- a/app/src/main/res/layout/fragment_login_pass.xml
+++ b/app/src/main/res/layout/fragment_login_pass.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="15dp"
         android:text="کد تایید 5 رقمی را وارد کنید."
         android:textSize="18sp"
-        android:textStyle="bold"
+       android:fontFamily="@font/sans_fa_name_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11" />
@@ -39,6 +39,7 @@
         tools:text="کد تایید برای شماره موبایل 09361234567 ارسال شد."
         android:textColor="@color/Primaryblack"
         android:textSize="12sp"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -77,11 +78,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/back_button"
+        android:fontFamily="@font/sans_fa_name_regular"
         android:text="ورود"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:enabled="false"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
@@ -93,6 +95,8 @@
         android:textColor="@color/Primaryblack"
         android:textSize="11sp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/sans_fa_name_regular"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/btn_login"
         app:layout_constraintStart_toStartOf="@+id/btn_login"
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
@@ -123,6 +127,7 @@
         android:layout_marginEnd="5dp"
         android:text="ویرایش شماره"
         android:textColor="@color/blue"
+        android:fontFamily="@font/sans_fa_name_regular"
         app:layout_constraintBottom_toBottomOf="@+id/imageView12"
         app:layout_constraintEnd_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toTopOf="@+id/imageView12" />
