--- a/app/src/main/res/layout/list_home.xml
+++ b/app/src/main/res/layout/list_home.xml
@@ -38,7 +38,7 @@
 
         <TextView
             android:id="@+id/txt_course"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -46,6 +46,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/cardView"
             app:layout_constraintStart_toStartOf="@+id/cardView"
