--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -43,7 +43,7 @@
             android:text="اندروید چیست؟"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:textStyle="bold"
+            android:fontFamily="@font/sans_fa_name_regular"
             app:layout_constraintBottom_toBottomOf="@+id/cardView"
             app:layout_constraintEnd_toStartOf="@+id/cardView"
             app:layout_constraintTop_toTopOf="@+id/cardView" />
