--- a/app/src/main/res/layout/title_recycler.xml
+++ b/app/src/main/res/layout/title_recycler.xml
@@ -36,6 +36,8 @@
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
         android:textColor="@color/black"
+        android:fontFamily="@font/sans_fa_name_regular"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_title"
         app:layout_constraintEnd_toStartOf="@+id/img_title"
         app:layout_constraintStart_toStartOf="parent"
